Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================== Lucene 9.5.0 =======================

API Changes
---------------------
* GITHUB#11998: Add new stored fields and termvectors interfaces: IndexReader.storedFields()
  and IndexReader.termVectors(). Deprecate IndexReader.document() and IndexReader.getTermVector().
  The new APIs do not rely upon ThreadLocal storage for each index segment, which can greatly
  reduce RAM requirements when there are many threads and/or segments.
  (Adrien Grand, Robert Muir)

* GITHUB#11742: MatchingFacetSetsCounts#getTopChildren now properly returns "top" children instead
  of all children. (Greg Miller)

* GITHUB#11772: Removed native subproject and WindowsDirectory implementation from lucene.misc. Recommendation:
  use MMapDirectory implementation on Windows. (Robert Muir, Uwe Schindler, Dawid Weiss)

* GITHUB#11804: FacetsCollector#collect is no longer final, allowing extension. (Greg Miller)

* GITHUB#11761: TieredMergePolicy now allowed a maximum allowable deletes percentage of down to 5%, and the default
  maximum allowable deletes percentage is changed from 33% to 20%. (Marc D'Mello)

* GITHUB#11822: Configure replicator PrimaryNode replia shutdown timeout. (Steven Schlansker)

* GITHUB#11930: Added IOContext#LOAD for files that are a small fraction of the
  total index size and heavily accessed with a random access pattern. Some
  Directory implementations may choose to load files that use this IOContext in
  memory to provide stronger guarantees on query latency.
  (Adrien Grand, Uwe Schindler)

* GITHUB#11941: QueryBuilder#add and #newSynonymQuery methods now take a `field` parameter,
  to avoid possible exceptions when building queries from an empty term list.  The helper
  TermAndBoost class now holds a BytesRef rather than a Term. (Alan Woodward)

* GITHUB#11961: VectorValues#EMPTY was removed as this instance was not